--- a/src/app/components/main/table/table.component.html
+++ b/src/app/components/main/table/table.component.html
@@ -8,13 +8,13 @@
         <div class="md:flex w-full lg:w-7/12">
           <app-search
             (search)="searchByName($event)"
-            class="max-lg:w-full"
+
           ></app-search>
           <app-filter
             (selectDate)="selectDate($event)"
             (filterDate)="filterDate($event)"
             (filterRole)="filterRole($event)"
-            class="max-lg:w-full"
+           
           ></app-filter>
         </div>
 
@@ -25,7 +25,15 @@
       </div>
     </div>
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" class="mt-5 ">
+      <table mat-table [dataSource]="dataSource" class="mt-5">
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef >
+            <mat-checkbox color="primary"  [(ngModel)]="selected" (change)="selectedUsers()" class="example-margin"></mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let user; let i = index">
+            <mat-checkbox color="primary" [checked]="selected" (change)="checkBox(user)" class="example-margin"></mat-checkbox>
+          </td>
+        </ng-container>
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let user">{{ this.user.username }}</td>
@@ -48,10 +56,15 @@
         <ng-container matColumnDef="Edit">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let user">
-            <button (click)="delete(user.id)" mat-raised-button color="primary" class="mr-2">
+            <button
+              (click)="delete(user.id)"
+              mat-raised-button
+              color="warn"
+              class="mr-2"
+            >
               Delete
             </button>
-            <button (click)="update(user)" mat-raised-button color="warn">
+            <button (click)="update(user)" mat-raised-button color="primary">
               Update
             </button>
           </td>
@@ -59,7 +72,11 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
       </table>
+      <div class="flex justify-end">
+        <button class="m-4 me-40" mat-raised-button color="warn" [disabled]="selectedAll.length == 0" (click)="deleteAll()">Delete selected items</button>
+      </div>
 
       <mat-paginator
         [pageSizeOptions]="[5, 10, 20]"
