--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900 sticky top-0">
+<nav class="bg-orange-500 border-gray-200 dark:bg-gray-900 sticky top-0">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a class="text-2xl font-bold">{{admin}}</a>
+    <a class="text-2xl font-bold text-white">{{admin}}</a>
     <button
       data-collapse-toggle="navbar-default"
       type="button"
@@ -34,9 +34,9 @@
         <li>
           <a
             routerLink="login"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+            class="inline-block py-2 px-3 text-black"
             aria-current="page"
-            >log Out</a
+            >log out</a
           >
         </li>
 
