--- a/src/app/components/main/table/new-user/user-dialog/user-dialog.component.html
+++ b/src/app/components/main/table/new-user/user-dialog/user-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="p-4 z-1">
   <header class="flex justify-between items-center">
     <h1 class="m-0">New User</h1>
-    <button mat-flat-button (click)="close(user)" >
+    <button mat-flat-button (click)="closeD()" >
       <mat-icon>close</mat-icon>
     </button>
   </header>
